--- a/app/globals.css
+++ b/app/globals.css
@@ -50,12 +50,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #fff;
+  color: #777;
 }
 .ant-input{
   background-color: transparent;
