responsive ness added

--- a/app/_components/commonComponents/style.module.css
+++ b/app/_components/commonComponents/style.module.css
@@ -1,7 +1,7 @@
-.primary_btn{
-   padding: 15px 25px;
+.primary_btn {
+    padding: 15px 35px;
     background-color: #0F143A;
     color: aliceblue;
     border-radius: 8px;
-
+    font-weight: 600;
 }
