responsive ness added

--- a/app/_components/homepage/clients/styles.css
+++ b/app/_components/homepage/clients/styles.css
@@ -8,6 +8,12 @@
 
 }
 
+.marque_images {
+    width: 150px;
+    height: 50px;
+    object-fit: contain;
+}
+
 .underlineCtm {
     color: #0F143A !important;
     background: url('../../../../public/Images/heroSectionSvgs/client_underline.svg');
