--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,14 @@
 
 @font-face {
   font-family: 'Mazzard';
-  src: url('../public/font/MazzardH-Regular.woff') format('woff');
+  src: url('../public/font/mazzard/MazzardH-Regular.ttf');
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'MazzardMedium';
+  src: url('../public/font/mazzard/MazzardH-Medium.ttf');
   font-weight: 500;
   font-display: swap;
 }
@@ -55,21 +62,55 @@ body {
 }
 .ant-input{
   background-color: transparent;
-  border: 1px solid rgba(15, 20, 58, 0.8);
-  height: 40px;
+  border: 2px solid rgba(15, 20, 58, 0.8);
+  font-size: 20px;
+  padding: 10px 20px;
   @apply font-mazzard;
+}
+.web-form .ant-input{
+  background-color: white;
+  border: 2px solid #0E003D;
+  border-radius: 8px;
+  font-size: 20px;
+  padding: 10px 20px;
+  @apply font-mazzard shadow-[-4px_4px_0px_0px_#272727];
+}
+.ant-select-selector{
+  @apply !h-auto !text-[20px] !px-[20px] !py-[10px]
+}
+.ant-select-arrow{
+  @apply !top-[86%] !right-[5%]
+}
+
+.ant-select, .ant-select-selection-item, .ant-select-item-option, .ant-input-prefix {
+  @apply !font-mazzardMedium  text-[#0F143A];
+}
+
+.custom-select-arrow {
+  background-image: url('../public/Images/landingPage/downArrowForm.svg');
+  background-size: 16px 16px;
+  background-repeat: no-repeat;
+  background-position: right center;
+  width: 16px;
+  height: 16px;
 }
 
 .numberInput .ant-input{
-  height: auto;
-  @apply font-mazzard;
+  @apply font-mazzard h-auto;
 }
 
 .ant-form-item-label label{
   font-size: 22px !important;
   color: rgba(15, 20, 58, 0.8) !important;
   font-weight: 500;
-  @apply font-mazzard;
+  @apply font-mazzardMedium;
+}
+
+.web-form .ant-form-item-label label{
+  font-size: 22px !important;
+  color: #0E003D !important;
+  font-weight: 500;
+  @apply font-mazzardMedium;
 }
 
 @media screen and (max-width: 1279px) {
