--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,10 +15,25 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
 @font-face {
   font-family: 'Recoleta';
   src: url('../public/font/Recoleta-Black.woff');
   font-weight: 900;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SpaceMonoBold';
+  src: url('../public/font/Recoleta-Black.woff');
+  font-weight: 900;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SpaceMonoRegular';
+  src: url('../public/font/Recoleta-Regular.ttf');
+  font-weight: 400;
   font-display: swap;
 }
 
@@ -40,7 +54,7 @@
 @font-face {
   font-family: 'headerFont';
   src:
-  url("../public/font/Recoleta-Black.woff") format("woff"),
+    url("../public/font/Recoleta-Black.woff") format("woff"),
 }
 
 @font-face {
@@ -49,8 +63,8 @@
     url("../public/font/MazzardH-Regular.woff") format("woff"),
 }
 
-*{
-  margin:0; 
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -60,14 +74,16 @@ body {
   background: #fff;
   color: #777;
 }
-.ant-input{
+
+.ant-input {
   background-color: transparent;
   border: 2px solid rgba(15, 20, 58, 0.8);
   font-size: 20px;
   padding: 10px 20px;
   @apply font-mazzard;
 }
-.web-form .ant-input{
+
+.web-form .ant-input {
   background-color: white;
   border: 2px solid #0E003D;
   border-radius: 8px;
@@ -75,15 +91,17 @@ body {
   padding: 10px 20px;
   @apply font-mazzard shadow-[-4px_4px_0px_0px_#272727];
 }
-.ant-select-selector{
+
+.ant-select-selector {
   @apply !h-auto !text-[20px] !px-[20px] !py-[10px]
 }
-.ant-select-arrow{
+
+.ant-select-arrow {
   @apply !top-[86%] !right-[5%]
 }
 
 .ant-select, .ant-select-selection-item, .ant-select-item-option, .ant-input-prefix {
-  @apply !font-mazzardMedium  text-[#0F143A];
+  @apply !font-mazzardMedium text-[#0F143A];
 }
 
 .custom-select-arrow {
@@ -95,18 +113,18 @@ body {
   height: 16px;
 }
 
-.numberInput .ant-input{
+.numberInput .ant-input {
   @apply font-mazzard h-auto;
 }
 
-.ant-form-item-label label{
+.ant-form-item-label label {
   font-size: 22px !important;
   color: rgba(15, 20, 58, 0.8) !important;
   font-weight: 500;
   @apply font-mazzardMedium;
 }
 
-.web-form .ant-form-item-label label{
+.web-form .ant-form-item-label label {
   font-size: 22px !important;
   color: #0E003D !important;
   font-weight: 500;
@@ -114,19 +132,19 @@ body {
 }
 
 @media screen and (max-width: 1279px) {
-  .ant-form-item-label label{
+  .ant-form-item-label label {
     font-size: 20px !important;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .ant-form-item-label label{
+  .ant-form-item-label label {
     font-size: 18px !important;
   }
 }
 
 @media screen and (max-width: 639px) {
-  .ant-form-item-label label{
+  .ant-form-item-label label {
     font-size: 14px !important;
   }
 }
