--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,20 @@
 }
 
 @font-face {
+  font-family: 'SpaceMono';
+  src: url('../public/font/spacemono/SpaceMono-Regular.ttf');
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SpaceMonoBold';
+  src: url('../public/font/spacemono/SpaceMono-Bold.ttf');
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'headerFont';
   src:
   url("../public/font/Recoleta-Black.woff") format("woff"),
@@ -67,13 +81,14 @@ body {
   padding: 10px 20px;
   @apply font-mazzard;
 }
+
 .web-form .ant-input{
   background-color: white;
   border: 2px solid #0E003D;
   border-radius: 8px;
   font-size: 20px;
   padding: 10px 20px;
-  @apply font-mazzard shadow-[-4px_4px_0px_0px_#272727];
+  @apply font-spaceMono shadow-[-4px_4px_0px_0px_#272727];
 }
 .ant-select-selector{
   @apply !h-auto !text-[20px] !px-[20px] !py-[10px]
@@ -110,7 +125,7 @@ body {
   font-size: 22px !important;
   color: #0E003D !important;
   font-weight: 500;
-  @apply font-mazzardMedium;
+  @apply font-spaceMonoBold;
 }
 
 @media screen and (max-width: 1279px) {
