--- a/app/globals.css
+++ b/app/globals.css
@@ -134,33 +134,51 @@ body {
 }
 
 .ant-form-item-label label {
-  font-size: 22px !important;
+  font-size: 24px !important;
   color: rgba(15, 20, 58, 0.8) !important;
   font-weight: 500;
   @apply font-mazzardMedium;
 }
 
 .web-form .ant-form-item-label label {
-  font-size: 22px !important;
+  font-size: 24px !important;
   color: #0E003D !important;
   font-weight: 500;
   @apply font-spaceMonoBold;
 }
 
+@media screen and (max-width: 1600px) {
+  .ant-form-item-label label,.web-form .ant-form-item-label label, .web-form .ant-input, .ant-input {
+    font-size: 24px !important;
+  }
+  .ant-input, .web-form .ant-input  {
+    padding: 10px 20px;
+  }
+}
+
 @media screen and (max-width: 1279px) {
-  .ant-form-item-label label {
-    font-size: 20px !important;
+  .ant-form-item-label label,.web-form .ant-form-item-label label, .web-form .ant-input, .ant-input {
+    font-size: 22px !important;
+  }
+  .ant-input, .web-form .ant-input  {
+    padding: 10px 20px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .ant-form-item-label label {
-    font-size: 18px !important;
+  .ant-form-item-label label,.web-form .ant-form-item-label label, .web-form .ant-input, .ant-input {
+    font-size: 22px !important;
+  }
+  .ant-input, .web-form .ant-input  {
+    padding: 10px 20px;
   }
 }
 
 @media screen and (max-width: 639px) {
-  .ant-form-item-label label {
+  .ant-form-item-label label,.web-form .ant-form-item-label label, .web-form .ant-input, .ant-input {
     font-size: 14px !important;
+  }
+  .ant-input, .web-form .ant-input  {
+    padding: 7px 20px;
   }
 }
