--- a/app/globals.css
+++ b/app/globals.css
@@ -107,7 +107,7 @@ body {
 }
 
 .ant-select-selector {
-  @apply !h-auto !text-[20px] !px-[20px] !py-[3px] sm:!py-[10px]
+  @apply !h-auto !text-[20px] !px-[20px] !py-[3px] sm:!py-[10px] !mb-2
 }
 
 .ant-select-arrow {
