--- a/app/globals.css
+++ b/app/globals.css
@@ -115,6 +115,10 @@ body {
   @apply font-mazzardMedium;
 }
 
+.ant-input:focus{
+  background-color: #FFFFFF;
+}
+
 .sellerLead .ant-form-item{
   margin-bottom: 32px;
 }
