--- a/app/_components/AboutPage/style.css
+++ b/app/_components/AboutPage/style.css
@@ -1,30 +1,75 @@
-.flippy-front,.flippy-back{
-    padding: 0 !important;
-   height: 335px !important;
-   width: 275px !important;
-}
-.flippy-back{
-    border-radius: 15px;
-    flex-direction: column;
-    align-items: center;
-
-}
-.text-container{
+.text-container {
     display: flex;
     flex-direction: column;
-    border: 2px solid black;
-    margin:1em;
     gap: 0.2em;
     align-items: center;
-
-border-radius: 10px;
-padding:1em 1em 0em 1em;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 1em 1em 0em 1em;
+    justify-content: center;
 }
 
-@media screen and (max-width: 300px) {
-    .flippy-front,.flippy-back{
-        padding: 0 !important;
-       height: 320px !important;
-       width: 275px !important;
-    }
+.flip-card {
+    background-color: transparent;
+    width: 412px;
+    height: 512px;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+}
+
+.flip-card:focus {
+    outline: 0;
+}
+
+.flip-card:hover .flip-card-inner,
+.flip-card:focus .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.flip-card-front {
+    background: white;
+    color: black;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 12px;
+}
+
+.flip-card-back {
+    background: white;
+    color: white;
+    transform: rotateY(180deg);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 12px;
+}
+
+h3 {
+    font-size: 20px;
+    font-family: Verdana, sans-serif;
+    font-weight: bold;
+    color: #fff;
 }
