--- a/app/_components/WorkPage/style.css
+++ b/app/_components/WorkPage/style.css
@@ -106,7 +106,7 @@
   width: 100%;
   bottom: -90%;
   left: 0%;
-  /* background-image: url("./../../../public/Images/landingPage/orenge_undeline.webp"); */
+  background-image: url("./../../../public/Images/landingPage/orenge_undeline.webp");
   background-repeat: no-repeat;
   line-height: 1.2;
   background-size: contain;
