--- a/app/_components/AboutPage/style.css
+++ b/app/_components/AboutPage/style.css
@@ -1,12 +1,14 @@
 .text-container {
   display: flex;
   flex-direction: column;
-  gap: 0.2em;
   align-items: center;
   border: 2px solid black;
   border-radius: 10px;
-  padding: 1em 1em 0em 1em;
   justify-content: center;
+}
+.person-image{
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
 .flip-card {
@@ -32,23 +34,165 @@
   background-color: #ffce1f;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (min-width: 1560px) {
   .flip-card {
     background-color: transparent;
-    width: 350px;
-    height: 450px;
+    width: 412px;
+    height: 512px;
+  }
+  .flip-card-front,.flip-card-back{
+    padding: 31px 31px 31px 31px;
+  }
+  .dot::before {
+    width: 30px;
+    height: 30px;
+  }
+  .name-plate{
+    margin-top: 36px;
+    font-size: 36px;
+    line-height: 36px;
+  }
+  .text-container {
+    padding: 25px;
+  }
+  .person-image, .text-container{
+    height: 360px;
+  }
+  .description{
+    font-size: 22px;
+    line-height: 32px;
+  }
+  .container-gap{
+    gap: 100px;
   }
 }
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 1559px) {
   .flip-card {
     background-color: transparent;
-    width: 300px;
-    height: 370px;
+    width: 360px;
+    height: 440px;
+  }
+  .flip-card-front,.flip-card-back{
+    padding: 26px 26px 26px 26px;
+  }
+  .dot::before {
+    width: 30px;
+    height: 30px;
+  }
+  .name-plate{
+    margin-top: 30px;
+    font-size: 30px;
+    line-height: 30px;
+  }
+  .text-container {
+    padding: 24px;
+  }
+  .person-image, .text-container{
+    height: 320px;
+  }
+  .description{
+    font-size: 22px;
+    line-height: 28px;
+  }
+  .container-gap{
+    gap: 100px;
   }
 }
-@media screen and (max-width: 624px) {
+
+@media screen and (max-width: 1119px) {
   .flip-card {
-    width: 300px;
+    background-color: transparent;
+    width: 295px;
+    height: 360px;
+  }
+  .flip-card-front,.flip-card-back{
+    padding: 26px 26px 26px 26px;
+  }
+  .dot::before {
+    width: 30px;
+    height: 30px;
+  }
+  .name-plate{
+    margin-top: 22px;
+    font-size: 24px;
+    line-height: 24px;
+  }
+  .text-container {
+    padding: 12px;
+  }
+  .person-image, .text-container{
+    height: 264px;
+  }
+  .description{
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .container-gap{
+    gap: 100px;
+  }
+}
+@media screen and (max-width: 959px) {
+  .flip-card {
+    background-color: transparent;
+    width: 240px;
+    height: 292px;
+  }
+  .flip-card-front,.flip-card-back{
+    padding: 20px 20px 20px 20px;
+  }
+  .dot::before {
+    width: 18px;
+    height: 18px;
+  }
+  .name-plate{
+    margin-top: 14px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+  .text-container {
+    padding: 10px;
+  }
+  .person-image, .text-container{
+    height: 220px;
+  }
+  .description{
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .container-gap{
+    gap: 60px;
+  }
+}
+@media screen and (max-width: 639px) {
+  .flip-card {
+    width: 220px;
+    height: 264px;
+  }
+  .flip-card-front,.flip-card-back{
+    padding: 12px 12px 12px 12px;
+  }
+  .dot::before {
+    width: 18px;
+    height: 18px;
+  }
+  .name-plate{
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 16px;
+  }
+  .text-container {
+    padding: 10px;
+  }
+  .person-image, .text-container{
+    height: 208px;
+  }
+  .description{
+    font-size: 13px;
+    line-height: 21px;
+  }
+  .container-gap{
+    gap: 32px;
   }
 }
 
@@ -62,6 +206,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   backface-visibility: hidden;
   -moz-backface-visibility: hidden;
+  border-radius: 12px;
 }
 
 .flip-card:focus {
@@ -86,7 +231,6 @@
   z-index: 2;
   display: flex;
   justify-content: center;
-  align-items: center;
   border: 2px solid black;
   border-radius: 12px;
 }
@@ -98,7 +242,6 @@
   z-index: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
   border: 2px solid black;
   border-radius: 12px;
 }
