--- a/app/globals.css
+++ b/app/globals.css
@@ -98,6 +98,9 @@ body {
 .sectionPadding {
   @apply px-[16px] md:px-[32px] lg:px-[64] xl:px-[96px] pt-[20px] md:pt-[26px] lg:pt-[36px] xl:pt-[64px];
 }
+.sectionBottomPadding {
+  @apply pb-[20px] md:pb-[50px];
+}
 
 .ant-input {
   background-color: transparent;
@@ -185,6 +188,13 @@ body {
   color: #0e003d !important;
   font-weight: 500;
   @apply font-spaceMonoBold;
+}
+.underlineCtm {
+  color: #0f143a !important;
+  background: url("../public/Images/heroSectionSvgs/client_underline.webp");
+  background-repeat: no-repeat;
+  background-position-y: bottom;
+  background-size: contain;
 }
 
 @media screen and (max-width: 1600px) {
