--- a/app/_components/web3page/styles.css
+++ b/app/_components/web3page/styles.css
@@ -1,4 +1,4 @@
-.parent {
+.parent-gallery {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(4, 1fr);
@@ -6,101 +6,101 @@
   grid-row-gap: 10px;
 }
 
-.div1 {
+.div1-gallery {
   grid-area: 1 / 1 / 3 / 3;
 }
-.div2 {
+.div2-gallery {
   grid-area: 3 / 1 / 5 / 3;
 }
-.div3 {
+.div3-gallery {
   grid-area: 1 / 3 / 3 / 5;
 }
-.div4 {
+.div4-gallery {
   grid-area: 3 / 3 / 5 / 5;
 }
-.div5 {
+.div5-gallery {
   grid-area: 1 / 5 / 5 / 9;
 }
-.div6 {
+.div6-gallery {
   grid-area: 1 / 9 / 3 / 11;
 }
-.div7 {
+.div7-gallery {
   grid-area: 1 / 11 / 3 / 13;
 }
-.div8 {
+.div8-gallery {
   grid-area: 3 / 9 / 5 / 11;
 }
-.div9 {
+.div9-gallery {
   grid-area: 3 / 11 / 5 / 13;
 }
 
 /* mobile -V */
 
 @media screen and (max-width: 900px) {
-  .parent {
+  .parent-gallery {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(8, 1fr);
   }
 
-  .div1 {
+  .div1-gallery {
     grid-area: 1 / 1 / 3 / 3;
   }
-  .div2 {
+  .div2-gallery {
     grid-area: 1 / 3 / 3 / 5;
   }
-  .div3 {
+  .div3-gallery {
     grid-area: 1 / 5 / 3 / 7;
   }
-  .div4 {
+  .div4-gallery {
     grid-area: 3 / 1 / 5 / 3;
   }
-  .div5 {
+  .div5-gallery {
     grid-area: 5 / 1 / 7 / 3;
   }
-  .div6 {
+  .div6-gallery {
     grid-area: 3 / 3 / 7 / 7;
   }
-  .div7 {
+  .div7-gallery {
     grid-area: 7 / 1 / 9 / 3;
   }
-  .div8 {
+  .div8-gallery {
     grid-area: 7 / 3 / 9 / 5;
   }
-  .div9 {
+  .div9-gallery {
     grid-area: 7 / 5 / 9 / 7;
   }
 }
 @media screen and (max-width: 640px) {
-  .parent {
+  .parent-gallery {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(12, 1fr);
   }
 
-  .div1 {
+  .div1-gallery {
     grid-area: 1 / 1 / 4 / 4;
   }
-  .div2 {
+  .div2-gallery {
     grid-area: 1 / 4 / 4 / 7;
   }
-  .div3 {
+  .div3-gallery {
     grid-area: 4 / 1 / 10 / 7;
   }
-  .div4 {
+  .div4-gallery {
     grid-area: 10 / 1 / 13 / 4;
   }
-  .div5 {
+  .div5-gallery {
     grid-area: 10 / 4 / 13 / 7;
   }
-  .div6 {
+  .div6-gallery {
     display: none;
   }
-  .div7 {
+  .div7-gallery {
     display: none;
   }
-  .div8 {
+  .div8-gallery {
     display: none;
   }
-  .div9 {
+  .div9-gallery {
     display: none;
   }
 }
