--- a/app/_components/CataloguePage/style.css
+++ b/app/_components/CataloguePage/style.css
@@ -1,34 +1,44 @@
 .catalogue_container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
+.swag_pack_button {
+  background-color: black;
+  height: 500px;
+  width: 500px;
+}
 
 .catalogue_container1 {
-  grid-area: 1 / 1 / 6 / 3;
+  grid-area: 1 / 1 / 2 / 3;
   /* width: -webkit-fill-available; */
 }
 .catalogue_container2 {
-  grid-area: 1 / 3 / 6 / 11;
-  width: -webkit-fill-available;
+  grid-area: 1 / 3 / 2 / 10;
+  /* width: -webkit-fill-available; */
 }
 .catalogue_container3 {
-  grid-area: 1 / 11 / 6 / 13;
-  width: -webkit-fill-available;
+  grid-area: 1 / 10 / 2 / 13;
+  /* width: -webkit-fill-available; */
 }
 
-/* .sidebar {
+.sidebar {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-} */
-
+}
+/* categories slider */
+.categories_slider {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
 /* cards */
 .cards {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  justify-content: center;
 }
 .card {
   width: 240px;
@@ -57,4 +67,22 @@
 .product_image {
   width: 125px;
   height: 150px;
+}
+
+@media only screen and (max-width: 1179px) {
+  .catalogue_container {
+    display: flex;
+    align-items: center;
+
+    flex-direction: column;
+  }
+
+  .swiper-button-prev::after {
+    color: #0f143a66;
+    font-size: 20px !important;
+  }
+  .swiper-button-next::after {
+    font-size: 20px !important;
+    color: #0f143a66;
+  }
 }
