side sidebar changed

--- a/app/_components/models/style.css
+++ b/app/_components/models/style.css
@@ -1,30 +1,30 @@
-.swiper-button-prev::after {
+.modalSwiper > .swiper-wrapper > .swiper-button-prev::after {
   color: #0f143a66;
   font-size: 20px !important;
 }
-.swiper-button-next::after {
+.modalSwiper > .swiper-wrapper > .swiper-button-next::after {
   font-size: 20px !important;
   color: #0f143a66;
   right: -8px;
 }
-.swiper-button-prev {
+.modalSwiper > .swiper-wrapper > .swiper-button-prev {
   left: -8px;
 }
-.swiper-button-next {
+.modalSwiper > .swiper-wrapper > .swiper-button-next {
   right: -8px;
 }
-.swiper-slide-prev {
+.modalSwiper > .swiper-wrapper > .swiper-slide-prev {
   opacity: 0.5;
   border: 1px solid #ccc;
 }
-.swiper-slide-active {
+.modalSwiper > .swiper-wrapper > .swiper-slide-active {
   border: 1px solid #000;
 }
-.swiper-slide-next {
+.modalSwiper > .swiper-wrapper > .swiper-slide-next {
   opacity: 0.5;
   border: 1px solid #ccc;
 }
-.swiper-slide {
+.modalSwiper > .swiper-wrapper > .swiper-slide {
   border-radius: 15px !important;
   overflow: hidden;
 }
